Implement finally the MVC

--- a/MVC/.vscode/settings.json
+++ b/MVC/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "list": "cpp",
-        "xmemory": "cpp"
+        "xmemory": "cpp",
+        "xstring": "cpp"
     }
 }
